{
  "version": 4,
  "terraform_version": "1.6.1",
  "serial": 65,
  "lineage": "b4371616-6513-04eb-c4b2-de7bd547f880",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:911732677275:security-group/sg-06191f591f9a1ffeb",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-06191f591f9a1ffeb",
            "name": "default",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-09d84f6b124829f3e"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "default_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:911732677275:subnet/subnet-05b6d305ed1dbd0ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "available_ip_address_count": 4090,
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b6d305ed1dbd0ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "911732677275",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-09d84f6b124829f3e"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:911732677275:vpc/vpc-09d84f6b124829f3e",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0adc99a280cba7830",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0df0c147d1e48b147",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09d84f6b124829f3e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04debbcd3748e49cf",
            "owner_id": "911732677275"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:911732677275:security-group/sg-0d2586911e71339ae",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0d2586911e71339ae",
            "ingress": [],
            "name": "terraform-20231020171502244500000001",
            "name_prefix": "terraform-",
            "owner_id": "911732677275",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09d84f6b124829f3e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs_fargate_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-783096714",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b1f42d36f842e51d",
            "security_group_rule_id": "sgr-06f70c87b5d0c87e2",
            "self": false,
            "source_security_group_id": "sg-0d2586911e71339ae",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.default",
            "data.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs-fargate",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:911732677275:security-group/sg-0b1f42d36f842e51d",
            "description": "Fargate service security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b1f42d36f842e51d",
            "ingress": [],
            "name": "ecs-fargate-example-ecs-service-sg-20231020165727814700000001",
            "name_prefix": "ecs-fargate-example-ecs-service-sg-",
            "owner_id": "911732677275",
            "revoke_rules_on_delete": true,
            "tags": {
              "Environment": "test",
              "Name": "ecs-fargate-example-ecs-service-sg",
              "Project": "Test"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "ecs-fargate-example-ecs-service-sg",
              "Project": "Test"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d84f6b124829f3e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs-fargate",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-165238615",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0b1f42d36f842e51d",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default_vpc",
            "module.ecs-fargate.aws_security_group.ecs_service"
          ]
        }
      ]
    }
  ]
}